--- a/style_main.css
+++ b/style_main.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -10,13 +14,6 @@ html {
     margin: 0;
     padding: 0;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap');
-
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap');
-
 
 body {
     background: url(img/background.png) fixed;
@@ -38,12 +35,12 @@ body {
     margin-bottom: 8px;
     text-transform: uppercase;
     padding: 0px 8px 0px 10px;
-    font-family: "Open Sans Condensed", sans-serif;
+    font-family: 'Noto Serif', serif;
     font-size: 1.8em;
 }
 
 .h2 {
-    font-family: "Open Sans Condensed", sans-serif;
+    font-family: 'Noto Serif', serif;
     max-width: 60%;
     text-align: center;
     color: #fff;
@@ -54,7 +51,6 @@ body {
     margin-bottom: 8px;
     text-transform: uppercase;
     padding: 0px 8px 0px 8px;
-    font-family: "Open Sans Condensed", sans-serif;
     font-weight: 600;
     font-size: 1.6em;
 }
@@ -105,15 +101,6 @@ body {
 }
 
 /* CONTENT DIV */
-div.first {
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-div.second {
-    padding-top: 0;
-    margin-top: 0;
-}
 
 .content {
     max-width: 75%;
@@ -159,6 +146,12 @@ div.second {
 @media only screen and (max-width: 1080px) {
     .content {
         font-size: 1.3em;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .main {
+        margin-left: 0;
     }
 }
 
