--- a/style_main.css
+++ b/style_main.css
@@ -19,6 +19,10 @@ body {
     cursor: help;
 }
 
+.main {
+    margin-top: 71px;
+}
+
 /* ЗАГОЛОВКИ */
 .h1 {
     font-family: 'Roboto', sans-serif;
@@ -270,6 +274,24 @@ a.exp-link:active {
     display: block;
     width: 80%;
     max-width: 700px;
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Caption of Modal Image */
