--- a/style_nav.css
+++ b/style_nav.css
@@ -1,4 +1,3 @@
-
 .openbtn:before {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' enable-background='new 0 0 24 24' height='24px' viewBox='0 0 24 24' width='24px' fill='rgb(255, 255, 255)'%3E%3Cpath d='M0,0h24v24H0V0z' fill='none'/%3E%3Cpath d='M3,18h13v-2H3V18z M3,13h10v-2H3V13z M3,6v2h13V6H3z M21,15.59L17.42,12L21,8.41L19.59,7l-5,5l5,5L21,15.59z'/%3E%3C/svg%3E");;
     vertical-align: middle;
@@ -43,7 +42,12 @@ ul.breadcrumb {
     font-family: 'Roboto', sans-serif;
     padding: 12px 18px;
     list-style: none;
-    background-color: rgb(14 85 64);    
+    background-color: rgb(14 85 64); 
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: block;
+    transition: top 0.3s;   
 }
 
 /* Display list items side by side */
