--- a/style_main.css
+++ b/style_main.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background: url(img/background.png) fixed;
+    background-color: rgb(239 239 239);
 }
 
 .abbr {
@@ -20,7 +20,7 @@ body {
 }
 
 .main {
-    margin-top: 71px;
+    margin-top: 80px;
 }
 
 /* ЗАГОЛОВКИ */
@@ -29,14 +29,16 @@ body {
     max-width: 80%;
     text-align: center;
     color: white;
-    background-color: #01517d;
+    background-color: rgb(0 91 142);
     border-radius: 18px;
     margin: 0 auto;
     margin-top: 8px;
     margin-bottom: 8px;
     text-transform: uppercase;
-    padding: 0px 8px 0px 10px;
+    padding: 12px;
     font-size: 1.8em;
+    line-height: 1.2em;
+    font-weight: 700;
 }
 
 .h2 {
@@ -53,6 +55,7 @@ body {
     padding: 0px 8px 0px 8px;
     font-weight: 700;
     font-size: 1.6em;
+    line-height: 1.2em;
 }
 
 /* subheadline - это div. Не h3, потому что не нужна индексация. Не p, чтобы не путался с другими p */
@@ -109,12 +112,14 @@ body {
     margin-top: 8px;
     margin-bottom: 8px;
     line-height: 1.6em;
-    background: rgba(78, 192, 253, .7);
+    background: #fff;
     overflow: hidden;
     padding: 1em;
     text-align: left;
     min-height: 100%;
     font-size: 1.6em;
+    border: 1px solid;
+    border-color: #efefef;
 }
 
 /* ОСНОВНОЙ ТЕКСТ */
@@ -156,7 +161,6 @@ body {
 }
 
 @media only screen and (max-width: 800px) {
-
     .content {
         max-width: 95%;
         font-size: 1.3em;
@@ -165,7 +169,6 @@ body {
 
 /* СКРЫТЫЕ ССЫЛКИ НА СТРАНИЦЕ ПОРТФОЛИО, оптимизация под IE */
 @media \0screen\,screen\9 {
-  
     .content a.hidden {
         display: block;
     }
