--- a/css/style_skils_exp.css
+++ b/css/style_skils_exp.css
@@ -1,88 +1,26 @@
-/* CSS для страниц: search, experience*/
+/* CSS для страниц: skills, experience*/
 
-.pagenav {
-    background-color: #577284;
-    display: none;
-    text-transform: uppercase;
-    font-size: 0.8em;
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-weight: 700;
-    border: 3px solid #ff8000;
-    border-top: none;
-    padding-bottom: 10px;
-}
-
-.pagenav a {
+a.blocklink {
     display: block;
-    color: #F3E0BE;
-    padding: 6px 0px 0px 8px;
+    margin-left: 10%;
 }
 
-.pagenav a:hover {
-    box-shadow: inset 5px 0 0 0 #ff8000
-}
-
-
-td.two {
-    width: 80%;
-    padding-left;
-}
-
-.stub {
-    background-color: #577284;
-    float: right;
-    position: fixed;
-    right: 0;
-    top: 55px;
-    text-transform: uppercase;
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-weight: 700;
-    padding: 10px;
-    border: 3px solid #ff8000;
-    margin-right: 1em;
-}
-
-#stublink {
-    color: #F3E0BE;
-    text-decoration: none;
-}
-
-.stub:hover .pagenav,
-#stublink:focus + .pagenav {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: -3px;
-    width: calc(100% + 6px);
-}
-
-.stub:hover .pagenav,
-.stub:focus-within .pagenav,
-#stublink:focus + .pagenav {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: -3px;
-    width: calc(100% + 6px);
-}
-
-.stub a:focus .pagenav {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: -3px;
-    width: calc(100% + 6px);
-    opacity: 1;
+.blocklink:before {
+     content:'— ';
 }
 
 ul.list {
     list-style-type: none;
     margin-left: 32px;
-    font-size: .8em;
 }
 
 ul.list li:before {
     content:'— ';
+    margin-left: -26px;
+}
+
+ul.list li {
+    margin-left: 12px;
 }
 
 .explain {
