--- a/css/style_cases.css
+++ b/css/style_cases.css
@@ -1,3 +1,17 @@
+.cases a.source {
+        display: block;
+    }
+
+.cases a.source:before {
+    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(244, 67, 54)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z' clip-rule='evenodd'/%3E%3Cpath fill-rule='evenodd' d='M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z' clip-rule='evenodd'/%3E%3C/svg%3E");
+    vertical-align: middle;
+}
+
+.cases a.source:hover:before {
+    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(244, 67, 54, .7)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z' clip-rule='evenodd'/%3E%3Cpath fill-rule='evenodd' d='M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z' clip-rule='evenodd'/%3E%3C/svg%3E");
+}
+
+
 #pp,
 #rdp,
 #cloud,
@@ -20,11 +34,6 @@
 #rdp,
 #cloud,
 #time,
-#virus,
-#LVM {
-    border-radius: 5px;
-}
-
 .case-padding {
     padding-left: 20px;
     padding-right: 20px;
@@ -39,20 +48,8 @@
     padding-bottom: 20px;
 }
 
-#pp,
-#rdp,
-#virus,
-#LVM {
-    height: 40vh;
-}
-
-#time {
-    height: 50vh;
-}
-
 .content a.cert {
     display: block;
-    color: #343148;
 }
 
 .cert {
@@ -61,50 +58,12 @@
 }
 
 .content a.cert:before {
-    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(255, 64, 0)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z'/%3E%3Ccircle cx='8' cy='4.5' r='1'/%3E%3C/svg%3E");
+    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(244, 67, 54)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z'/%3E%3Ccircle cx='8' cy='4.5' r='1'/%3E%3C/svg%3E");
     vertical-align: middle;
 }
 
-.content a.cert:hover::before {
-    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(255, 128, 0)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z'/%3E%3Ccircle cx='8' cy='4.5' r='1'/%3E%3C/svg%3E");
-}
-
-.content a.cert:hover,
-.content a.cert:visited:hover {
-    color: #f7f7f7;
-}
-
-.content a.cert:visited,
-.content a.cert:active,
-.content a.cert:visited:active {
-    color: #423c5d;
-}
-
-/* Появляется, когда сужается страница */
-
-.content a.hidden {
-    display: none;
-    color: #343148;
-}
-
-.content a.hidden:before {
-    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(255, 64, 0)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z' clip-rule='evenodd'/%3E%3Cpath fill-rule='evenodd' d='M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z' clip-rule='evenodd'/%3E%3C/svg%3E");
-    vertical-align: middle;
-}
-
-.content a.hidden:hover::before {
-    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(255, 128, 0)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z' clip-rule='evenodd'/%3E%3Cpath fill-rule='evenodd' d='M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z' clip-rule='evenodd'/%3E%3C/svg%3E");
-}
-
-.content a.hidden:hover,
-.content a.hidden:visited:hover {
-    color: #f7f7f7;
-}
-
-.content a.hidden:visited,
-.content a.hidden:active,
-.content a.hidden:visited:active {
-    color: #423c5d;
+.content a.cert:hover:before {
+    content: url("data:image/svg+xml,%3Csvg width='2em' height='2em' viewBox='0 0 16 16' fill='rgb(244, 67, 54, .7)' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z'/%3E%3Ccircle cx='8' cy='4.5' r='1'/%3E%3C/svg%3E");
 }
 
 @media only screen and (max-width: 1390px) {
@@ -130,11 +89,6 @@
 }
 
 @media only screen and (max-width: 1080px) {
-
-    .content a.hidden {
-        display: block;
-    }
-
     #pp,
     #rdp,
     #virus,
