--- a/css/style_nav.css
+++ b/css/style_nav.css
@@ -95,7 +95,7 @@ ul.breadcrumb li a:active {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(14 85 64);
+    background-color: rgb(14, 85, 64);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -111,15 +111,15 @@ ul.breadcrumb li a:active {
 }
 
 .sidebar a:hover {
-    background-color: rgb(49 109 91);
+    background-color: rgb(49, 109, 91);
 }
 
 .sidebar a:active {
-    background-color: rgb(128 165 154);
+    background-color: rgb(128, 165, 154);
 }
 
 .sidebar a.current {
-   background-color: rgb(31 97 77); 
+   background-color: rgb(31, 97, 77); 
 }
 
 
