--- a/css/style_main.css
+++ b/css/style_main.css
@@ -36,8 +36,8 @@ body {
     margin-bottom: 8px;
     text-transform: uppercase;
     padding: 12px;
-    font-size: 1.8em;
-    line-height: 1.2em;
+    font-size: 1.8rem;
+    line-height: 1.2rem;
     font-weight: 700;
 }
 
@@ -54,8 +54,8 @@ body {
     text-transform: uppercase;
     padding: 0px 8px 0px 8px;
     font-weight: 700;
-    font-size: 1.6em;
-    line-height: 1.2em;
+    font-size: 1.6rem;
+    line-height: 1.2rem;
 }
 
 /* subheadline - это div. Не h3, потому что не нужна индексация. Не p, чтобы не путался с другими p */
@@ -66,12 +66,12 @@ body {
 
 @media only screen and (max-width: 480px) {
     .h1 {
-        font-size: 1.6em;
+        font-size: 1.6rem;
         max-width: 100%;
     }
 
     .h2 {
-        font-size: 1.4em;
+        font-size: 1.4rem;
         max-width: 100%;
     }
 
@@ -79,12 +79,12 @@ body {
 
 @media only screen and (max-width: 400px) {
     .h1 {
-        font-size: 1.4em;
+        font-size: 1.4rem;
         max-width: 100%;
     }
 
     .h2 {
-        font-size: 1.2em;
+        font-size: 1.2rem;
         max-width: 100%;
         width: 100%;
     }
@@ -92,12 +92,12 @@ body {
 
 @media only screen and (max-width: 370px) {
     .h1 {
-        font-size: 1.2em;
+        font-size: 1.2rem;
         max-width: 100%;
     }
 
     .h2 {
-        font-size: 1em;
+        font-size: 1rem;
         max-width: 100%;
         width: 100%;
     }
@@ -111,13 +111,13 @@ body {
     margin: 0 auto;
     margin-top: 8px;
     margin-bottom: 8px;
-    line-height: 1.6em;
+    line-height: 1.6rem;
     background: #fff;
     overflow: hidden;
-    padding: 1em;
+    padding: 1rem;
     text-align: left;
     min-height: 100%;
-    font-size: 1.6em;
+    font-size: 1.6rem;
     border: 1px solid;
     border-color: #efefef;
 }
@@ -145,7 +145,7 @@ body {
 
 @media only screen and (max-width: 1080px) {
     .content {
-        font-size: 1.3em;
+        font-size: 1.3rem;
     }
 }
 
@@ -158,7 +158,7 @@ body {
 @media only screen and (max-width: 800px) {
     .content {
         max-width: 95%;
-        font-size: 1.3em;
+        font-size: 1.3rem;
     }
 }
 
@@ -305,11 +305,11 @@ body {
 
 @media only screen and (max-width: 670px) {
     .pagetop {
-        bottom: 3em;
-        right: 1em;
+        bottom: 3rem;
+        right: 1rem;
         border-radius: 20px;
-        padding: 0.4em;
-        font-size: 1em;
+        padding: 0.4rem;
+        font-size: 1rem;
         box-sizing: border-box;
     }
 }
