--- a/css/style_main.css
+++ b/css/style_main.css
@@ -36,8 +36,8 @@ body {
     margin-bottom: 8px;
     text-transform: uppercase;
     padding: 4px 0px 4px 0px;
-    font-size: 1.8em;
-    line-height: 2.2em;
+    font-size: 2em;
+    line-height: 1.6em;
     font-weight: 700;
 }
 
@@ -54,8 +54,15 @@ body {
     text-transform: uppercase;
     padding: 2px 0px 2px 0px;
     font-weight: 700;
+    font-size: 1.9em;
+    line-height: 1.6em;
+}
+
+/* ОСНОВНОЙ ТЕКСТ */
+.main .content p {
+    padding: 12px;
     font-size: 1.6em;
-    line-height: 2.2em;
+    line-height: 1.6em;
 }
 
 /* subheadline - это div. Не h3, потому что не нужна индексация. Не p, чтобы не путался с другими p */
@@ -64,28 +71,96 @@ body {
     text-align: center;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 1480px) {
     .h1 {
+        font-size: 1.9em;
+        line-height: 1.4em;
+    }
+
+    .h2 {
+        font-size: 1.8em;
+        line-height: 1.4em;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .h1 {
+        font-size: 1.7em;
+        line-height: 1.2em;
+    }
+
+    .h2 {
         font-size: 1.6em;
+        line-height: 1.2em;
+    }
+
+    .main .content p {
+        font-size: 1.4em;
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    .main .content p {
+        font-size: 1.3em;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .main {
+        margin-left: 0;
+    }
+
+    .content {
+        max-width: 95%;
+    }
+
+    .h1 {
+        font-size: 1.5em;
+        line-height: 1.2em;
+    }
+
+    .h2 {
+        font-size: 1.4em;
+        line-height: 1.2em;
+    }
+
+    .main .content p {
+        font-size: 1.3em;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .h1 {
+        font-size: 1.4em;
         max-width: 100%;
+        line-height: 1.3em;
     }
 
     .h2 {
         font-size: 1.4em;
         max-width: 100%;
+        line-height: 1.3em;
+    }
+
+    .main .content p {
+        font-size: 1em;
+        padding: 6px;
     }
 }
 
 @media only screen and (max-width: 400px) {
     .h1 {
-        font-size: 1.4em;
-        max-width: 100%;
+        font-size: 1.3em;
+        line-height: 1.4em;
     }
 
     .h2 {
         font-size: 1.2em;
-        max-width: 100%;
-        width: 100%;
+        line-height: 1.4em;
+    }
+
+    .main .content p {
+        font-size: 1.1em;
     }
 }
 
@@ -100,6 +175,11 @@ body {
         max-width: 100%;
         width: 100%;
     }
+
+    .main .content p {
+        font-size: .9em;
+        line-height: 1.6em;
+    }
 }
 
 /* CONTENT DIV */
@@ -110,20 +190,13 @@ body {
     margin: 0 auto;
     margin-top: 8px;
     margin-bottom: 8px;
-    line-height: 2.0em;
     background: #fff;
     overflow: hidden;
     padding: 1em;
     text-align: left;
     min-height: 100%;
-    font-size: 1.3em;
     border: 1px solid;
     border-color: #efefef;
-}
-
-/* ОСНОВНОЙ ТЕКСТ */
-.content p {
-    padding: 12px;
 }
 
 /* ОСНОВНЫЕ ССЫЛКИ */
@@ -140,22 +213,6 @@ body {
 .content a:active, .footer a:active {
     color: #0262d5;
     text-decoration: underline;
-}
-
-@media only screen and (max-width: 1080px) {
-    .content {
-        font-size: 1.3em;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .main {
-        margin-left: 0;
-    }
-    .content {
-        max-width: 95%;
-        font-size: 1.3em;
-    }
 }
 
 /* MY PHOTO */
