--- a/css/style_main.css
+++ b/css/style_main.css
@@ -146,6 +146,9 @@ body {
         font-size: 1em;
         padding: 6px;
     }
+    .main .content {
+         max-width: 90%;
+    }
 }
 
 @media only screen and (max-width: 400px) {
@@ -171,13 +174,13 @@ body {
     }
 
     .h2 {
-        font-size: 1em;
+        font-size: 1.1em;
         max-width: 100%;
         width: 100%;
     }
 
     .main .content p {
-        font-size: .9em;
+        font-size: 1em;
         line-height: 1.6em;
     }
 }
@@ -194,7 +197,6 @@ body {
     overflow: hidden;
     padding: 1em;
     text-align: left;
-    min-height: 100%;
     border: 1px solid;
     border-color: #efefef;
 }
